--- a/requirements.txt
+++ b/requirements.txt
@@ -16,9 +16,11 @@ comm==0.2.3
 debugpy==1.8.17
 decorator==5.2.1
 defusedxml==0.7.1
+duckdb==1.4.0
 executing==2.2.1
 fastjsonschema==2.21.2
 fqdn==1.5.1
+glob2==0.7
 h11==0.16.0
 httpcore==1.0.9
 httpx==0.28.1
@@ -56,8 +58,10 @@ nbformat==5.10.4
 nest-asyncio==1.6.0
 notebook==7.4.5
 notebook_shim==0.2.4
+numpy==2.3.3
 overrides==7.7.0
 packaging==25.0
+pandas==2.3.2
 pandocfilters==1.5.1
 parso==0.8.5
 pexpect==4.9.0
@@ -71,6 +75,7 @@ pycparser==2.23
 Pygments==2.19.2
 python-dateutil==2.9.0.post0
 python-json-logger==3.3.0
+pytz==2025.2
 PyYAML==6.0.2
 pyzmq==27.1.0
 referencing==0.36.2
@@ -90,6 +95,7 @@ tornado==6.5.2
 traitlets==5.14.3
 types-python-dateutil==2.9.0.20250822
 typing_extensions==4.15.0
+tzdata==2025.2
 uri-template==1.3.0
 urllib3==2.5.0
 wcwidth==0.2.13
