chore: update gitignore
We now ignore the contents of data_raw and all contents of data intermediate EXCEPT the downsampled version of the aggregated data and its prepared version with calculated fields for the analysis. The reason for this is so people can download the repo and run the most important scripts without having to manually download the data from the Divvy database.

--- a/.gitignore
+++ b/.gitignore
@@ -5,4 +5,11 @@
 .DS_Store
 scripts_and_notebooks/.ipynb_checkpoints
 venv/
-data_intermediate/
+data_raw/
+data_intermediate/*
+
+# Make exception for these two files in data_intermediate/
+# This will let other people run the more important parts of the analysis
+# without needing to manually download all the data themselves.
+!data_intermediate/tripdata_2024-2025_v1_downsampled-100k.csv
+!data_intermediate/tripdata_2024-2025_v1_downsampled-100k_calc-fields.csv
